force-app/main/default/objects/FS_Group_Settings__mdt/FS_Group_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Settings for each FS group</description>
    <label>FS Group Settings</label>
    <pluralLabel>FS Group Settings</pluralLabel>
</CustomObject>