force-app/main/default/objects/FS_Group_Settings__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this is an active FS group.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>