force-app/main/default/objects/FS_Group_Settings__mdt/fields/Designated_Role_for_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Designated_Role_for_Ownership__c</fullName>
    <description>Name of Role to use for assigning ownership of records for this FS group.</description>
    <label>Designated Role for Ownership</label>
    <length>55</length>
    <type>Text</type>
</CustomField>