force-app/main/default/objects/FS_Group_Settings__mdt/fields/From_email_address__c.field-meta.xml
<CustomField>
    <fullName>From_email_address__c</fullName>
    <description>Email address used as sender for acknowledgements and general correspondence.</description>
    <inlineHelpText>Email address used as sender for acknowledgements and general correspondence.</inlineHelpText>
    <label>From email address</label>
    <type>Email</type>
</CustomField>