force-app/main/default/objects/FS_Group_Settings__mdt/fields/GFW_COA_Name__c.field-meta.xml
<CustomField>
    <fullName>GFW_COA_Name__c</fullName>
    <description>Name of relevant Chart of Account record in GFW db.</description>
    <label>GFW COA Name</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>