force-app/main/default/objects/FS_Group_Settings__mdt/fields/Grants_Community_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Grants_Community_Account_Name__c</fullName>
    <description>Name of umbrella community Account record under which all community contacts for this FS groups&apos; grant site reside.</description>
    <inlineHelpText>Name of umbrella community Account record under which all community contacts for this FS groups&apos; grant site reside.</inlineHelpText>
    <label>Grants Community Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>