force-app/main/default/objects/FS_Group_Settings__mdt/fields/Grants_Community_User_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Grants_Community_User_Profile_Name__c</fullName>
    <description>Name of User Profile used for Grants Community.</description>
    <inlineHelpText>Name of User Profile used for Grants Community.</inlineHelpText>
    <label>Grants Community User Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>