force-app/main/default/objects/FS_Group_Settings__mdt/fields/Permission_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Name__c</fullName>
    <description>API name of Permission Set for this FS Group.</description>
    <inlineHelpText>API name of Permission Set for this FS Group.</inlineHelpText>
    <label>Grants Community Permission Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>