force-app/main/default/objects/FS_Group_Settings__mdt/fields/Public_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Public_Group_Name__c</fullName>
    <description>DeveloperName of Public Group for this FS group</description>
    <label>Public Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>