force-app/main/default/objects/FS_Group_Settings__mdt/listViews/All_custom.listView-meta.xml
<ListView>
    <fullName>All_custom</fullName>
    <columns>MasterLabel</columns>
    <columns>Active__c</columns>
    <columns>DeveloperName</columns>
    <columns>Designated_Role_for_Ownership__c</columns>
    <columns>GFW_COA_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All custom</label>
    <language>en_US</language>
</ListView>